--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To do</title>
+  <title>To Do</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <div class="container">
     <input id="todo-input" type="text" placeholder="To do Agenda">
     <input class="date-input" type="datetime-local">
     <button class="add-button">Add</button>
-</div>
-<div class="generated-html generated-html2"></div>
-<script src="todo.js"></script>
+  </div>
+  <div class="generated-html generated-html2"></div>
+  <script src="todo.js"></script>
 </body>
 </html>
