--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
   <div class="container">
-    <input id="todo-input" type="text" placeholder="To do Agenda">
-    <input class="date-input" type="datetime-local">
-    <button class="add-button">Add</button>
+    <!-- Input Group -->
+    <div class="input-group">
+      <input id="todo-input" type="text" placeholder="To do Agenda">
+      <input class="date-input" type="datetime-local">
+      <button class="add-button">Add</button>
+    </div>
+
+    <!-- To-Do List -->
+    <div class="generated-html generated-html2"></div>
   </div>
-  <div class="generated-html generated-html2"></div>
   <script src="todo.js"></script>
 </body>
 </html>
