--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Input Group -->
     <div class="input-group">
       <input id="todo-input" type="text" placeholder="To do Agenda">
-      <input class="date-input" type="datetime-local">
+      <input class="date-input" type="date">
       <button class="add-button">Add</button>
     </div>
 
